--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="shortcut icon" type="image/x-icon"  href="favicon.ico">
+		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 		<title>Karma</title>
 	</head>
 
@@ -53,7 +54,13 @@
 		
 		<footer>
 			<h3>Join us on</h3>
-			<h4>C Karma Mobility, Inc</h4>
+			<ul class="icons">
+	            <li><i class="fa fa-twitter"></i></li>
+	            <li><i class="fa fa-facebook"></i></li>
+	            <li><i class="fa fa-instagram"></i></li>
+       		</ul>
+			
+			<h4>&copy; Karma Mobility, Inc</h4>
 		</footer>
 	</body>
 
